<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="leave">Sair</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add_person">Add person</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="TODO">TODO</string>
    <string name="n_o_tem_conta_cadastre_se">Não tem conta? Cadastre-se</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="sign_up">Cadastrar</string>
    <string name="new_contact">Novo contato</string>
    <string name="user_not_found">Usuario nao possui cadastro</string>
    <string name="message">Message</string>
    <string name="login_success">Sucesso ao fazer login</string>
</resources>
