<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/leave"
        android:title="@string/leave"
        android:orderInCategory="200"
        app:showAsAction="never"
        />

    <item android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>

    <item android:id="@+id/add_person"
        android:title="@string/add_person"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add"/>

</menu>